--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,8 @@ Build-Depends:
     nasm,
     libslang2-dev,
     pkg-config,
+    libgmp-dev,
+    libmpfr-dev,
     debhelper (>= 11)
 Standards-Version: 4.1.2
 Homepage: https://github.com/jwt27/build-gcc
