--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
         if: contains(matrix.os, 'macos')
         run: |
           brew update -q
-          brew install -q --formula bash bison flex curl make texinfo zlib bzip2 gzip xz unzip dos2unix libtool cmake help2man nasm s-lang ccache
+          brew install -q --formula bash curl make texinfo gzip xz dos2unix libtool cmake help2man nasm s-lang ccache
           mkdir -p $HOME/.ccache
           echo "CCACHE_DIR=$HOME/.ccache" >> $GITHUB_ENV
           echo "$(brew --prefix)/opt/ccache/libexec" >> $GITHUB_PATH
