--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,6 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        build-type: [ clean ]
         env:
           -
             TARGET: i386-pc-msdosdjgpp
@@ -99,36 +98,12 @@ jobs:
           PACKAGES: ${{ matrix.env.PACKAGES }}
         run: ./script/select-script.sh --only-download
 
-      - name: Cache build output
-        uses: actions/cache@v4
-        if: matrix.build-type == 'rebuild'
-        id: cache-build
-        with:
-          path: build
-          key: testbuild-build-${{ matrix.os }}-${{ matrix.env.TARGET }}-${{ matrix.env.PACKAGES }}-${{ github.sha }}
-          restore-keys: |
-            testbuild-build-${{ matrix.os }}-${{ matrix.env.TARGET }}-${{ matrix.env.PACKAGES }}-
-
-      - name: Clean build
-        if: matrix.build-type == 'clean'
+      - name: Build
         env:
           TARGET: ${{ matrix.env.TARGET }}
         run: ./script/select-script.sh --no-download --prefix=${{ github.workspace }}-${{ github.sha }} ${{ matrix.env.PACKAGES }}
 
-      - name: Rebuild
-        if: matrix.build-type == 'rebuild'
-        env:
-          TARGET: ${{ matrix.env.TARGET }}
-        run: ./script/select-script.sh --no-download --prefix=${{ github.workspace }} ${{ matrix.env.PACKAGES }}
-
-      - name: Rebuild if uncached
-        if: matrix.build-type == 'rebuild' && steps.cache-build.outputs.cache-hit != 'true'
-        env:
-          TARGET: ${{ matrix.env.TARGET }}
-        run: ./script/select-script.sh --no-download --prefix=${{ github.workspace }} ${{ matrix.env.PACKAGES }}
-
       - name: Clear and pack git sources before caching
-        if: matrix.build-type == 'clean'
         run: |
           find download/*/* ! -wholename '*/.git/*' -delete || true
           cd download
